microk8s/workloads/pihole/pihole-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  type: NodePort
  selector:
    app: pihole
  ports:
  - name: web
    port: 8000
    targetPort: web
  - name: dns-tcp
    protocol: TCP
    port: 53
    # Using named targetPorts does not work correctly, when multiple service ports (different protocols) point to the same named containerPort
    # Kubernetes endpoints (kubectl get endpoints) are not generated for the conflicting ports
    # Can't see this limitation documented anywhere - bug?
    # targetPort: dns
  - name: dns-udp
    protocol: UDP
    port: 53
    # targetPort: dns
  externalIPs:
  - 192.168.0.4

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-dns # https://metallb.universe.tf/usage/#ip-address-sharing
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
  - name: web
    port: 80
    targetPort: web
  - name: dns-tcp
    protocol: TCP
    port: 53
    # targetPort: dns
  # externalTrafficPolicy must be Local to preserve source IP - https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip
  externalTrafficPolicy: Cluster # https://metallb.universe.tf/usage/#ip-address-sharing
  loadBalancerIP: 192.168.0.10

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-dns # https://metallb.universe.tf/usage/#ip-address-sharing
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
  - name: dns-udp
    protocol: UDP
    port: 53
    # targetPort: dns
  # externalTrafficPolicy must be Local to preserve source IP - https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip
  externalTrafficPolicy: Cluster # https://metallb.universe.tf/usage/#ip-address-sharing
  loadBalancerIP: 192.168.0.10
