microk8s/workloads/pihole/pihole.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      volumes:
      - name: pihole-local-etc-volume
        persistentVolumeClaim:
          claimName: pihole-local-etc-claim
      - name: pihole-local-dnsmasq-volume
        persistentVolumeClaim:
          claimName: pihole-local-dnsmasq-claim
      containers:
      - name: pihole
        image: pihole/pihole:latest
        ports:
        - name: web
          containerPort: 80
        - name: dns
          containerPort: 53
        volumeMounts:
        - name: pihole-local-etc-volume
          mountPath: "/etc/pihole"
        - name: pihole-local-dnsmasq-volume
          mountPath: "/etc/dnsmasq.d"
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  type: NodePort
  selector:
    app: pihole
  ports:
  - name: web
    port: 8000
    targetPort: web
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: dns
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: dns
  # Attempt to preserve source IP - https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip
  # Does not seem to work, possibly because accessing via service port, not nodeport
  externalTrafficPolicy: Local
  externalIPs:
  - 192.168.0.4
